# cli-utils

./: Cargo.toml  temp.txt
src/: args.rs  lib.rs  main.rs
src/args/: cat.rs  echo.rs  ls.rs  mod.rs
src/tools/: cat.rs  echo.rs  ls.rs  mod.rs
tests/tools/: echo.rs  main.rs  utils.rs
